    besides 'help'
  - fix spurious 'password changed' message when 1st pass password check

09 January 2012
  - added dictFromVO/TO, initWithDict for vo and to; compiles, no testing or use

10 January 2012
  - fixed crash from spurious keyboardwillshow message - textbox observer not removed, 
    fix was to simply remove all observers for that self. Extended to all removeobservers,
    no longer specify which one being removed just remove all.
  - write tracker plist appears to work

11 January 2012
 - put name: back into removeObserver calls, ensured all object:'s set to nil;
 - initial testing goes through, can load tracker plist & corresponding csv file
--- check in ---
 
12 January 2012
 - modified vos:update() for number and text so textfield value saved if don't done keyboard
 
15 January 2012
 - initial code to display "<owner>'s tracks" as main title 

17 January 2012
 - moved help and privacy icons to right so not first thing picked
 - start on controlling width of owner's name in title, 'rTracker' if too long

18 January 2012
 - finish handling owner's name
 - update Default.png
 - fix bug from vos:update on empty vos-num field -- dtf.text not init to @"" but was for vos-text
 - fix bug in priv button staying blue after cancel from create pass -- moved refreshTooBar to end of priv:setShowing instead of beginning

--- check in ---

19 January 2012
 - change setMaxWidth to rescanMaxWidth, put in loadconfig for fix - but turns out is xcode 4.2 bug with 4.2 devices.  used hack.
 - made checkbox frames slightly bigger in configVT 

20 January 2012
 - add minUniquev to tObjBase, use for dictionary loads to avoid dup values
 - set minValue to 0 for autoscale
 - added shake in graph view to recalculate function values.
 - added activity indicator while recalculating 

21 January 2012
 - initial add time funcs : elapsed hours/days/weeks 
   - initial tests work for hrs

22 January 2012
 - prep for 1.0.4

--- check in ---