@@ -299,6 +299,9 @@
 	// subclass overrides if need to do anything
 }
 
+- (void) resetData {
+	// subclass overrides if need to do anything
+}
 /*
 - (void) transformVO:(NSMutableArray *)xdat ydat:(NSMutableArray *)ydat dscale:(double)dscale height:(CGFloat)height border:(float)border firstDate:(int)firstDate {
     DBGErr(@"transformVO with no handler!");
