@@ -318,3 +318,7 @@
  - prep for 1.0.4
 
 --- check in ---
+
+ - resign first responder from graph on graph disappears, else text boxes stop working
+ - update problem for next date -> current, not wiping values; added vos.resetData to handle
+
